update readme. add more test icons

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,5 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/fish.png DESTINATION ${CMAKE_BINARY_DIR})
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/pp0n2c16.png DESTINATION ${CMAKE_BINARY_DIR})
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/bee.png DESTINATION ${CMAKE_BINARY_DIR})
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nature.png DESTINATION ${CMAKE_BINARY_DIR})
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/basi0g01.png DESTINATION ${CMAKE_BINARY_DIR})
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/basn0g01.png DESTINATION ${CMAKE_BINARY_DIR})
